samples/_failures_safe/1761626249_7fa3ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2a1d127.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_b2a1d127.c:126:9: error: expected expression at end of input
  126 |         det +=
      |         ^~~
./samples/SAFE/__tmp_b2a1d127.c:126:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2a1d127.c:126:9: error: expected declaration or statement at end of input
